--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "@ai-sdk/openai": "^2.0.76",
     "ai": "^5.0.106",
-    "next": "^15.5.6",
+    "next": "15.0.2",
     "openai": "^6.9.1",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react": "19.0.0-rc-02c0e824-20241028",
+    "react-dom": "19.0.0-rc-02c0e824-20241028"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.16",
@@ -24,7 +24,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "^15.5.6",
+    "eslint-config-next": "15.0.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
