--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.76",
-    "ai": "^5.0.106",
+    "ai": "3.4.0",
     "next": "15.0.2",
-    "openai": "^6.9.1",
+    "openai": "4.104.0",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028"
   },
