--- a/package.json
+++ b/package.json
@@ -7,27 +7,24 @@
     "build": "next build",
     "pages:build": "npx @cloudflare/next-on-pages",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint"
   },
   "dependencies": {
-    "ai": "^3.4.0",
-    "clsx": "^2.1.1",
-    "framer-motion": "^12.23.25",
+    "ai": "3.4.0",
     "next": "14.2.15",
-    "openai": "^4.67.0",
+    "openai": "4.104.0",
     "react": "^18",
-    "react-dom": "^18",
-    "tailwind-merge": "^3.4.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.13.5",
+    "@cloudflare/next-on-pages": "^1.13.16",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
