--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.5",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.22",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "typescript": "^5"
   }
 }
