--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.2.15",
     "openai": "4.104.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.16",
