--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "ai": "3.4.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.555.0",
     "next": "14.2.15",
     "openai": "4.104.0",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
