--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,3 +2,7 @@ name = "chatter"
 compatibility_date = "2024-11-12"
 compatibility_flags = ["nodejs_compat"]
 pages_build_output_dir = ".vercel/output/static"
+
+[[r2_buckets]]
+bucket_name = "chatter-data"
+binding = "CHATTER_DATA"
