--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.555.0",
     "next": "14.2.15",
     "openai": "4.104.0",
+    "pdfjs-dist": "^5.4.449",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^3.4.0",
